--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,11 +3,13 @@ name: Electron Build and Release
 on:
   push:
     tags:
-      - 'v*' # Запускать рабочий процесс при пуше тегов, начинающихся с 'v' (например, v1.0.0)
+      - 'v*' 
 
 jobs:
-  build-and-release:
-    runs-on: ubuntu-latest
+  build-windows:
+    runs-on: windows-latest
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout code
@@ -16,15 +18,79 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20' # Используйте версию Node.js, которая подходит для вашего проекта
+          node-version: '20'
 
       - name: Install dependencies
         run: npm install
 
-      - name: Build Electron app
-        run: npm run make
+      - name: Build Electron app for Windows
+        run: npm run make:win
 
-      - name: Upload artifacts to Release
+      - name: Upload Windows artifacts to Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            out/**/*.exe
+            out/**/*.zip
+          prerelease: ${{ contains(github.ref, '-beta') || contains(github.ref, '-rc') }}
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  build-macos:
+    runs-on: macos-latest
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build Electron app for macOS
+        run: npm run make:mac
+
+      - name: Upload macOS artifacts to Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            out/**/*.dmg
+            out/**/*.zip
+          prerelease: ${{ contains(github.ref, '-beta') || contains(github.ref, '-rc') }}
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  build-linux:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build Electron app for Linux
+        run: npm run make:linux
+
+      - name: Upload Linux artifacts to Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
@@ -32,7 +98,6 @@ jobs:
             out/**/*.deb
             out/**/*.rpm
             out/**/*.AppImage
-            out/**/*.zip
           prerelease: ${{ contains(github.ref, '-beta') || contains(github.ref, '-rc') }}
           generate_release_notes: true
         env:
