--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
+    "make:win": "electron-forge make --platform=win32",
+    "make:mac": "electron-forge make --platform=darwin",
+    "make:linux": "electron-forge make --platform=linux",
     "publish": "electron-forge publish",
     "lint": "echo \"No linting configured\""
   },
