fix package name for deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Wplan Auto",
+  "name": "Wplan-Auto",
   "productName": "Wplan Auto",
   "version": "1.0.0",
   "description": "My Electron application description",
