--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Wplan-Auto",
   "productName": "Wplan Auto",
-  "version": "1.0.0",
+  "version": "1.0.6",
   "description": "My Electron application description",
   "main": "src/main/index.js",
   "scripts": {
@@ -14,6 +14,10 @@
     "publish": "electron-forge publish",
     "lint": "echo \"No linting configured\""
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Myakis/ruslan-gift.git"
+  },
   "keywords": [],
   "author": {
     "name": "myakishev.a",
@@ -23,7 +27,8 @@
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^11.0.2",
-    "node-schedule": "^2.1.1"
+    "node-schedule": "^2.1.1",
+    "update-electron-app": "^3.1.2"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.10.2",
