--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,15 +57,14 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build Electron app for macOS
-        run: npm run make:mac
+      - name: Build Electron app for macOS (zip only)
+        run: npx electron-forge make --platform=darwin --targets=@electron-forge/maker-zip
 
       - name: Upload macOS artifacts to Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            out/**/*.dmg
             out/**/*.zip
           prerelease: ${{ contains(github.ref, '-beta') || contains(github.ref, '-rc') }}
           generate_release_notes: true
